--- a/Register/index.html
+++ b/Register/index.html
@@ -27,7 +27,7 @@
       <div class="container">
         <img src="./Image-register/image 3.png" alt="..." />
         <nav class="cart-login-register">
-          <a href="">
+          <a href="/index/index.html">
             <img src="./Image-register/Group 1.png" alt="..." />
           </a>
           <a href="">Login</a>
