--- a/index/index.html
+++ b/index/index.html
@@ -31,7 +31,7 @@
             <img src="./img/Group 1.png" alt="..." />
           </a>
           <a href="">Login</a>
-          <a href="">Register</a>
+          <a href="/Register/index.html">Register</a>
         </nav>
       </div>
     </header>
@@ -58,6 +58,17 @@
         </div>
         <div class="button">
           <button>Buy now</button>
+        </div>
+      </div>
+    </section>
+    <section class="Product">
+      <div class="container">
+        <div class="product_feature">
+          <p>-Product Feature -</p>
+        </div>
+        <div class="card">
+            
+          </div>
         </div>
       </div>
     </section>
